--- a/views/home/index.html
+++ b/views/home/index.html
@@ -149,7 +149,7 @@
       
 
       <div class="h-[36rem] hidden lg:block">
-        <img src="../../img/moto-version.png" alt="" class="h-full w-full">
+        <img src="/images/astrofondo.svg" alt="" class="h-full w-full">
       </div>
 
       <div class="flex flex-col gap-12 max-w-xl">
