--- a/views/login/index.html
+++ b/views/login/index.html
@@ -33,7 +33,7 @@
 
       <div class="justify-center items-center flex-col gap-8 h-full w-[40%] hidden lg:flex rounded-lg shadow-inner">
         <h1 class="text-center w-[50%] text-2xl"></h1>
-        <img src="/images/astrofondo.svg" alt="">
+        <img src="/images/moto-version.png" alt="">
         
       </div>
       
