--- a/views/home/index.html
+++ b/views/home/index.html
@@ -23,7 +23,7 @@
     }
 
     #about-us, #services, #projects {
-      background-image: url(/images/fondo-espacial.jpg);
+      background-image: url(/images/fondo-pagina.svg);
       background-repeat: no-repeat;
       background-size: cover;
     }
