--- a/views/home/index.html
+++ b/views/home/index.html
@@ -201,7 +201,7 @@
             </ul>
 
             <div class="my-4 px-8 py-4 ">
-              <a class="bg-pink-500 rounded-md p-2 lg:text-sm text-xs font-bold cursor-pointer">¡Conoce nuestros precios!</a>
+              <a href="/services" class="bg-pink-500 rounded-md p-2 lg:text-sm text-xs font-bold cursor-pointer">¡Conoce nuestros precios!</a>
             </div>
           </div>
 
@@ -221,7 +221,7 @@
             </ul>
 
             <div class=" my-4 px-8 py-4 ">
-              <a class="bg-cyan-400 rounded-md p-2 lg:text-sm text-xs font-bold cursor-pointer">¡Conoce nuestros precios!</a>
+              <a href="/services" class="bg-cyan-400 rounded-md p-2 lg:text-sm text-xs font-bold cursor-pointer">¡Conoce nuestros precios!</a>
             </div>
 
           </div>
@@ -243,7 +243,7 @@
             </ul>
 
             <div class=" my-4 px-8 py-4 ">
-              <a class="bg-amber-400 rounded-md p-2 lg:text-sm text-xs font-bold cursor-pointer">¡Conoce nuestros precios!</a>
+              <a href="/services" class="bg-amber-400 rounded-md p-2 lg:text-sm text-xs font-bold cursor-pointer">¡Conoce nuestros precios!</a>
             </div>
 
           </div>
