--- a/views/app/index.html
+++ b/views/app/index.html
@@ -1417,9 +1417,9 @@
 
   </div>
 
-  <!-- <script src="../components/nav.js"></script> -->
   <script type="module" src="index.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/flowbite/1.6.3/flowbite.min.js"></script>
+  <script type="module" src="/components/notification.js"></script>
 </body>
 
 </html>
