--- a/views/home/index.html
+++ b/views/home/index.html
@@ -261,7 +261,7 @@
       
     </div>
 
-    <div id="projects" class="text-white flex flex-col gap-12 justify-center items-center p-12 pt-20 relative w-full">
+    <div id="projects" class="text-white flex flex-col gap-12 justify-center items-center p-12 pt-20 relative w-full hidden">
 
       <h1 class="font-bold text-3xl">Proyectos</h1>
 
