--- a/views/app/index.html
+++ b/views/app/index.html
@@ -281,7 +281,7 @@
 
  
 
-  <div id="main-div" class="h-screen w-screen">
+  <div id="main-div" class="h-screen w-screen text-zinc-100">
 
     <!-- Home page -->
 
