--- a/views/app/index.html
+++ b/views/app/index.html
@@ -9,7 +9,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Poppins" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
-  <link rel="shortcut icon" href="images/gatito chiquito.svg">
+  <link rel="shortcut icon" href="/images/gatito chiquito.svg">
   <script src="https://cdn.tailwindcss.com"></script>
 
   <style>
@@ -23,7 +23,7 @@
     }
   </style>
 
-  <title>¡Bienvenido a !</title>
+  <title>Mariol Design | App</title>
 </head>
 
 <body class="overflow-hidden flex flex-row bg-zinc-900">
