--- a/views/app/index.html
+++ b/views/app/index.html
@@ -180,13 +180,13 @@
     <div class="lg:flex flex-col gap-4 hidden p-2 absolute bottom-10">
       <!-- Cerrar sesión -->
       <div class="hover:bg-zinc-700 w-10 group-hover:w-full p-2 rounded-md transition-all duration-300">
-        <a href="" class="log-out flex gap-4 items-center justify-center text-sm  text-zinc-100"><svg class="w-5 h-5"
+        <div href="" class="log-out flex gap-4 items-center justify-center text-sm  text-zinc-100"><svg class="w-5 h-5"
             xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor">
             <path fill-rule="evenodd"
               d="M7.5 3.75A1.5 1.5 0 006 5.25v13.5a1.5 1.5 0 001.5 1.5h6a1.5 1.5 0 001.5-1.5V15a.75.75 0 011.5 0v3.75a3 3 0 01-3 3h-6a3 3 0 01-3-3V5.25a3 3 0 013-3h6a3 3 0 013 3V9A.75.75 0 0115 9V5.25a1.5 1.5 0 00-1.5-1.5h-6zm5.03 4.72a.75.75 0 010 1.06l-1.72 1.72h10.94a.75.75 0 010 1.5H10.81l1.72 1.72a.75.75 0 11-1.06 1.06l-3-3a.75.75 0 010-1.06l3-3a.75.75 0 011.06 0z"
               clip-rule="evenodd" />
           </svg>
-          <span class="hidden group-hover:block">Cerrar Sesión</span></a>
+          <span class="hidden group-hover:block">Cerrar Sesión</span></div>
       </div>
     </div>
 
@@ -258,7 +258,7 @@
       
       <!-- Cerrar sesión -->
   
-        <a href="" class="log-out flex flex-col items-center justify-center text-zinc-100">
+        <div href="" class="log-out flex flex-col items-center justify-center text-zinc-100">
           <svg class="w-5 h-5"
             xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor">
             <path fill-rule="evenodd"
@@ -266,7 +266,7 @@
               clip-rule="evenodd" />
           </svg>
         <p>Cerrar sesión</p>  
-        </a>      
+        </div>      
   
     </div>
   </nav>
@@ -465,7 +465,7 @@
   
 
 
-    <div id="services" class="h-full w-full p-2 flex flex-col  items-center pb-16 lg:pb-8 client hidden">
+    <div id="services" class="h-full w-full p-2 flex flex-col  items-center pb-16 lg:pb-8 client hidden text-black">
 
       <div class="h-auto w-full p-4 md:p-8 lg:p-10 grid md:grid-cols-2 md:grid-rows-none lg:grid-cols-2  lg:grid-rows-none grid-rows-none gap-4 md:gap-y-10 overflow-auto place-items-center relative ">
         <!-- <div class="h-full w-52 bg-blue-500 rounded-br-full rounded-tr-full flex items-center justify-center">
